<resources>
    <string name="app_name">"it's"</string>

    <!--邵光添加Start-->
    <string name="tui_chu_cheng_xu">再按一次退出程序</string>
    <string name="guan_zhu">关注</string>
    <string name="ni_suo_guan_zhu_shi">你所关注的事</string>
    <string name="tui_jian">推荐</string>
    <string name="mei_tian_fa_sheng_shi">每天发生的事</string>
    <string name="ou_yu">偶遇</string>
    <string name="yu_dao_zi_ji_xi_huan_shi">遇到自己喜欢的事</string>
    <string name="mei">没</string>
    <string name="yi_si">意思</string>
    <string name="you">有</string>
    <!--邵光添加End-->

    <!--登录注册-->
    <string name="register">注  册</string>
    <string name="login_name">Account number</string>
    <string name="login_pwd">Password</string>
    <string name="login_btn">登  录</string>
    <string name="login_register">注册IMIU账号</string>
    <string name="login_forget">忘记密码</string>
    <string name="login_toast_name">用户名不能为空</string>
    <string name="login_toast_psd">密码不能为空</string>
    <string name="register_toast_lengh">密码长度不得少于8位字符</string>
    <string name="register_toast_name">用户名为字母、数字、下划线</string>
    <string name="forget_toast_repwd">确认密码不能为空</string>
    <string name="forget_toast_password">两次输入的密码不一致</string>

    <!--侧滑界面-->
    <string name="slide_search">搜索</string>
    <string name="slide_friend">好友列表</string>
    <string name="slide_collect">收藏</string>
    <string name="slide_world">全球漫游</string>
    <string name="slide_mean">意思意思</string>
    <string name="slide_footprint">足迹</string>
    <string name="slide_setting">设置</string>
    <string name="slide_translate">翻译</string>
    <!--官方消息-->
    <string name="GFNews">官方消息</string>
    <string name="news">新闻</string>
    <string name="num">5</string>
    <!-- 消息-->
    <string name="dongtai">动态</string>
    <string name="message">留言</string>
    <string name="News">消息</string>
    <string name="youyisi">有意思</string>
    <string name="meiyisi">没意思</string>
    <string name="pinglun">评论</string>
    <!--自定义刷新-->
    <string name="pull_to_refresh">下拉刷新</string>
    <string name="release_to_refresh">释放立即刷新</string>
    <string name="refreshing">正在刷新...</string>
    <string name="refresh_succeed">刷新成功</string>
    <string name="refresh_fail">刷新失败</string>
    <string name="pullup_to_load">上拉加载更多</string>
    <string name="release_to_load">释放立即加载</string>
    <string name="loading">正在加载...</string>
    <string name="load_succeed">加载成功</string>
    <string name="load_fail">加载失败</string>
    <!--发布-->
    <string name="publish_context">说点有意思的事...</string>
    <string name="publish">发布</string>
    <string name="cancel">取消</string>
    <string name="publish_send">发送</string>
    <!-- 相册界面-->
    <string name="release_ok">下一步</string>
    <string name="camera">相机胶卷</string>
    <!-- 预览 -->
    <string name="only_choose_num">超出可选图片张数</string>
    <string name="finish">完成</string>
    <string name="invalidSD">sdcard无效或没有插入！</string>
    <string name="select_photo">选择相册</string>
    <string name="album">相册</string>
    <string name="preview">预览</string>
    <string name="yuantu">原图</string>
    <string name="unfinished">完成</string>
    <string name="no_photo">相册没有图片</string>
    <!--我的发布详情页面-->
    <string name="publish_content">内容不能为空</string>
    <string name="release_choose_photo">请选择一张图片</string>
    <string name="deleate">删除</string>
    <string name="photos_already_up">已达到照片选择上限</string>
    <string name="photos_num">%1$d张</string>
    <string name="commit_num">确定(%1$d/%2$d)</string>
    <string name="internet">网络连接异常</string>
    <string name="loadingData">&#160;正在加载...</string>
    <string name="loadingSubmit">&#160;正在提交...</string>
    <string name="nodate">没有数据显示</string>
    <string name="yi_guan_zhu">已关注</string>
    <string name="preview_num">预览(%1$s)</string>
    <string name="message_max_num">你最多可以选择%1$s张图片</string>
    <string name="choose">选择</string>
    <string name="yiyou">已有</string>
    <string name="coumtry_canyu">个国家参与</string>
    <string name="shuodianshenme">说点什么</string>

</resources>
