<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/activity_mian"
    android:background="@color/color_b000"
    android:orientation="vertical"
    >
    <LinearLayout
       style="@style/activity_mian"
        android:layout_weight="1"></LinearLayout>
    <RelativeLayout
        style="@style/activity_mian"
        android:layout_weight="1"
        android:background="@color/color_fff">
        <LinearLayout
            android:id="@+id/rl_out"
          style="@style/activity_wrap">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_se_30"
            android:orientation="horizontal"
            android:background="@drawable/xian">
            <TextView
                android:id="@+id/tv_comment_quxiao"
                android:textColor="@color/color_939"
                android:textSize="@dimen/text_se_12"
                style="@style/activity_mian"
                android:layout_weight="2"
                android:text="@string/cancel"
                android:gravity="center"/>
            <TextView
                android:id="@+id/tv_comment_pinglun"
                android:textColor="@color/color_939"
                android:textSize="@dimen/text_se_12"
                style="@style/activity_mian"
                android:layout_weight="1"
                android:text="@string/pinglun"
                android:gravity="center"/>
            <TextView
                android:id="@+id/tv_comment_fasong"
                style="@style/activity_mian"
                android:layout_weight="2"
                android:gravity="center"
                android:text="@string/publish_send"
                android:textColor="@color/color_939"
                android:textSize="@dimen/text_se_12"/>
        </LinearLayout>
        </LinearLayout>
        <TextView
            android:id="@+id/tv_xian"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/height_se_1"
            android:layout_below="@+id/rl_out"
            android:background="@mipmap/nav_xian"/>
        <EditText
            android:id="@+id/tv_content"
            style="@style/activity_mian"
            android:layout_below="@+id/tv_xian"
            android:background="@color/color_fff"
            android:hint="@string/shuodianshenme"
            android:gravity="left"
            android:padding="@dimen/height_se_10"/>
    </RelativeLayout>
</LinearLayout>
