<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.itis.activitys.DongTaiActivity">
    <RelativeLayout
        android:id="@+id/first"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_se_50">
        <ImageView
            android:padding="@dimen/height_se_12"
            android:id="@+id/back"
            android:src="@mipmap/nav_button_jiantou"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_se_16"
            android:text="@string/dongtai"
            android:padding="@dimen/height_se_12"
            android:layout_centerHorizontal="true"
            android:textColor="@color/color_939"/>
    </RelativeLayout>
    <include
        layout="@layout/item_linear"/>
    <RelativeLayout
        android:id="@+id/dongtai"
        android:layout_below="@+id/second"
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:padding="@dimen/height_se_12"
        android:layout_height="@dimen/height_se_60">
        <TextView
            android:layout_toRightOf="@+id/dongtai_iv"
            android:id="@+id/dongtai_tv"
            android:gravity="center"
            android:textColor="@color/color_939"
            android:layout_marginLeft="@dimen/height_se_10"
            android:textSize="@dimen/text_se_16"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/youyisi"/>
        <TextView
            android:layout_alignParentRight="true"
            android:id="@+id/nums"
            android:layout_marginRight="@dimen/height_se_20"
            android:gravity="center"
            android:layout_centerVertical="true"
            android:text="@string/num"
            android:background="@mipmap/msg_bg"
            android:layout_width="@dimen/height_se_18"
            android:layout_height="@dimen/height_se_18"  />
    </RelativeLayout>
    <include
        layout="@layout/item_linear"/>
    <RelativeLayout
        android:id="@+id/liuyan"
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:padding="@dimen/height_se_12"
        android:layout_height="@dimen/height_se_60">
        <TextView
            android:layout_toRightOf="@+id/liuyan_iv"
            android:id="@+id/liuyan_tv"
            android:gravity="center"
            android:textColor="@color/color_939"
            android:layout_marginLeft="@dimen/height_se_10"
            android:textSize="@dimen/text_se_16"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/meiyisi"/>
        <ImageView
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/height_se_20"
            android:gravity="center"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/list_jiantou"/>
    </RelativeLayout>
    <include
        layout="@layout/item_linear"/>
    <RelativeLayout
        android:id="@+id/GFNews"
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:padding="@dimen/height_se_12"
        android:layout_height="@dimen/height_se_60">

        <TextView
            android:layout_toRightOf="@+id/gfnew_iv"
            android:id="@+id/gfnews_tv"
            android:gravity="center"
            android:textColor="@color/color_939"
            android:layout_marginLeft="@dimen/height_se_10"
            android:textSize="@dimen/text_se_16"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/pinglun"/>
        <ImageView
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/height_se_20"
            android:gravity="center"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/list_jiantou"/>
    </RelativeLayout>
    <include
        layout="@layout/item_linear"/>
</LinearLayout>
