<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_939">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/left"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_marginTop="@dimen/height_se_25"
            android:layout_marginBottom="@dimen/height_se_10"
            android:padding="@dimen/height_se_10"
            android:id="@+id/linear"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/photo"
                android:layout_marginLeft="@dimen/height_se_30"
                android:layout_centerHorizontal="true"
                android:src="@drawable/user_touxiang"
                android:layout_width="@dimen/height_se_50"
                android:layout_height="@dimen/height_se_50" />
            <TextView
                android:id="@+id/name"
                android:text="Defslak"
                android:textSize="@dimen/text_se_16"
                android:textColor="@color/color_fff"
                android:layout_marginLeft="@dimen/height_se_10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <ImageView
                android:layout_marginLeft="@dimen/height_se_10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/america"/>
        </LinearLayout>

        <TextView
            android:id="@+id/line"
            android:layout_below="@+id/linear"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_se_1"
            android:background="@drawable/xian"/>
        <LinearLayout
            android:layout_marginTop="@dimen/height_se_16"

            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/search"
                android:layout_marginLeft="@dimen/height_se_35"
                android:padding="@dimen/height_se_10"
                android:src="@drawable/list_icon_search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/search_tv"
                android:textColor="@color/color_fff"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/height_se_10"
                android:text="@string/slide_search"
                android:textSize="@dimen/text_se_16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="@dimen/height_se_16"

            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/friend"
                android:layout_marginLeft="@dimen/height_se_35"
                android:padding="@dimen/height_se_10"
                android:src="@drawable/list_icon_haoyou"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/friend_tv"
                android:textSize="@dimen/text_se_16"
                android:textColor="@color/color_fff"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/height_se_10"
                android:text="@string/slide_friend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="@dimen/height_se_16"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/collect"
                android:layout_marginLeft="@dimen/height_se_35"
                android:padding="@dimen/height_se_10"
                android:src="@drawable/list_icon_shoucang"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/collect_tv"
                android:textColor="@color/color_fff"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/height_se_10"
                android:text="@string/slide_collect"
                android:textSize="@dimen/text_se_16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="@dimen/height_se_16"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/world"
                android:layout_marginLeft="@dimen/height_se_35"
                android:padding="@dimen/height_se_10"
                android:src="@drawable/list_icon_feiji"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/world_tv"
                android:textColor="@color/color_fff"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/height_se_10"
                android:textSize="@dimen/text_se_16"
                android:text="@string/slide_world"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="@dimen/height_se_16"

            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/mean"
                android:layout_marginLeft="@dimen/height_se_35"
                android:padding="@dimen/height_se_10"
                android:src="@drawable/list_icon_xiaolian"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/mean_tv"
                android:textColor="@color/color_fff"
                android:layout_gravity="center_vertical"
                android:textSize="@dimen/text_se_16"
                android:layout_marginLeft="@dimen/height_se_10"
                android:text="@string/slide_mean"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="@dimen/height_se_16"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/footprint"
                android:layout_marginLeft="@dimen/height_se_35"
                android:padding="@dimen/height_se_10"
                android:src="@drawable/list_icon_zuji"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/footprint_tv"
                android:textColor="@color/color_fff"
                android:textSize="@dimen/text_se_16"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/height_se_10"
                android:text="@string/slide_footprint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_below="@+id/left"
        android:layout_marginTop="@dimen/height_se_100"
        android:gravity="center_vertical"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:padding="@dimen/height_se_10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_marginLeft="@dimen/height_se_35"
            android:id="@+id/setting"
            android:src="@drawable/list_icon_shezhi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/setting_tv"
            android:layout_marginLeft="@dimen/height_se_35"
            android:textSize="@dimen/text_se_16"
            android:layout_marginTop="@dimen/height_se_10"
            android:textColor="@color/color_fff"
            android:text="@string/slide_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:gravity="center_vertical"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginRight="@dimen/height_se_20"
        android:orientation="vertical"
        android:padding="@dimen/height_se_10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/translate"
            android:src="@drawable/list_icon_fanyi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/translate_tv"
            android:layout_marginTop="@dimen/height_se_10"
            android:textSize="@dimen/text_se_16"
            android:textColor="@color/color_fff"
            android:text="@string/slide_translate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    </RelativeLayout>
</ScrollView>
