<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/lin_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_fff"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_se_42"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/back"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:background="@null"
            android:src="@drawable/back" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/register"
            android:textColor="@color/color_939"
            android:textSize="@dimen/text_se_16" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="3" />
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="4">
    <ImageView
        android:layout_width="@dimen/height_se_70"
        android:layout_height="@dimen/height_se_70"
        android:src="@drawable/logo"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        />
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginLeft="@dimen/height_se_21"
        android:layout_marginRight="@dimen/height_se_21"
        android:layout_weight="4">
    <EditText
        android:id="@+id/register_name"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@null"
        android:drawableLeft="@drawable/username"
        android:paddingLeft="@dimen/height_se_7"
        android:drawablePadding="@dimen/height_se_25"
        android:hint="@string/login_name"
        android:singleLine="true"
        android:textColorHint="@color/color_7cd"
        android:textSize="@dimen/text_se_14"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_se_1"
        android:background="@drawable/register_line"></View>
    <EditText
        android:id="@+id/register_psw"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@null"
        android:drawableLeft="@drawable/password"
        android:paddingLeft="@dimen/height_se_7"
        android:drawablePadding="@dimen/height_se_25"
        android:hint="@string/login_pwd"
        android:singleLine="true"
        android:inputType="textPassword"
        android:textColorHint="@color/color_7cd"
        android:textSize="@dimen/text_se_14"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_se_1"
        android:background="@drawable/register_line"></View>

    <EditText
        android:id="@+id/register_repsw"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@null"
        android:drawableLeft="@drawable/password"
        android:paddingLeft="@dimen/height_se_7"
        android:drawablePadding="@dimen/height_se_25"
        android:hint="@string/login_pwd"
        android:singleLine="true"
        android:inputType="textPassword"
        android:textColorHint="@color/color_7cd"
        android:textSize="@dimen/text_se_14"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_se_1"
        android:background="@drawable/register_line"></View>
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/height_se_21"
        android:layout_marginRight="@dimen/height_se_21"
        android:layout_weight="3">
    <Button
        android:id="@+id/register_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/login"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/register"
        android:textSize="@dimen/text_se_18"
        android:textColor="@color/color_fff"/>
    </RelativeLayout>
</LinearLayout>
